--- a/ViewBooks.html
+++ b/ViewBooks.html
@@ -64,8 +64,8 @@
         </div>
     </div>
 
-    <div class="all_books">
-        
+    <div class="all_books" id ="all_books">
+
     </div>
 </body>
 
