Added the BookPage.js and Updated the BookPage.html

--- a/BookPage.html
+++ b/BookPage.html
@@ -53,33 +53,7 @@
             </form>
         </div>
     </div>
-    <div class="book">
-        <div>
-            <img class="bookimg" alt="The book preface" src="pics/clean code image.jpg">
-        </div>
-        <div class="bookdef">
-            <h1>Clean Code</h1>
-            <h2>Category : Education </h2>
-            <h2>Author : Robert C.Martin </h2>
-            <p>
-                Even bad code can function. But if code isn’t clean, it can bring a development 
-                organization to its knees. Every year, countless hours and significant resources 
-                are lost because of poorly written code. But it doesn’t have to be that way.
-            </p>
-            <h2>About the Book :</h2>
-            <h5>Edition : 1st edition</h5>
-            <h5>Publisher : Pearson</h5>
-            <h5>Publishing Date : 2008</h5>
-            <h5>Number of Pages : 462 page</h5>
-            <h5>ISBN-code : 9988759761359</h5>
-            <h2>About the author :</h2>
-            <p>
-                Martin has authored many books and magazine articles. 
-                He was the editor-in-chief of C++ Report magazine 
-                and served as the first chairman of the Agile Alliance.
-            </p>
-        </div>
-    </div>
+    <div class="book" id="Book"></div>
     <div>
         <div class="btns">
             <div>
