--- a/AddBook.html
+++ b/AddBook.html
@@ -72,6 +72,11 @@
         </div>
 
         <div class="form_group">
+            <label class = "subtitle" for="category">category</label>
+            <input class="form_style" type="text" id="category"><br><br>
+        </div>
+
+        <div class="form_group">
             <label class = "subtitle" for="numberofpages">number of pages</label>
             <input class="form_style" type="number" id="numberofpages" min="0" max="100000"><br><br>
         </div>
