--- a/BookPage.html
+++ b/BookPage.html
@@ -53,21 +53,11 @@
             </form>
         </div>
     </div>
+    <div></div>
     <div class="book" id="Book"></div>
     <div>
-        <div class="btns">
-            <div>
-                <button class="borrow"><a class="btnword" href="BorrowBook.html" target="_blanc">Borrow</a></button>
-                <button class="edit"><a class="btnword" href="EditBook.html?id=1" target="_blanc">Edit</a></button>
-                <input class="delete" type="button" onclick="alert('Are you sure you want to delete this book?')" value="Delete">
-            </div>
-            <div>
-                <h3 class="commentword">Share your Opinion</h3>
-                <textarea class="commentbox" placeholder="Put you Comment here!"></textarea>
-            </div>
-            <div>
-                <button class="commentbtn">Comment</button>
-            </div>
+        <div class="btns" id="Btns">
+            
         </div>
     </div>
     </div>
