--- a/BookPage.html
+++ b/BookPage.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <script src="javascript/navBar.js"></script>
+    <script src="javascript/BookPage.js"></script>
+    <script src="javascript/search.js"></script>
     <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/BookPage.css">
     <link rel="stylesheet" href="css/nav_bar.css">
