--- a/Profile.html
+++ b/Profile.html
@@ -83,8 +83,7 @@
 
         <div class="borrowed-books">
             <h3 id="profile-h3">Borrowed Books</h3>
-            <ul>
-              <li>Clean Code <a href="BookPage.html">View Book</a></li>
+            <ul id="borrowed-books-list">
             </ul>
         </div>
 
