--- a/Profile.html
+++ b/Profile.html
@@ -82,7 +82,7 @@
         <br>
 
         <div class="borrowed-books">
-            <h3 id="profile-h3">Borrowed Books</h3>
+            <h3 id="profile-h3">Borrowed Books History</h3>
             <ul id="borrowed-books-list">
             </ul>
         </div>
