--- a/AddBook.html
+++ b/AddBook.html
@@ -58,27 +58,27 @@
 
         <div class="form_group">
             <label class = "subtitle" for="nameofthebook">name of the book</label>
-            <input class="form_style" type="text" id="nameofthebook"><br><br>
+            <input class="form_style" type="text" id="nameofthebook" required><br><br>
         </div>
 
         <div class="form_group">
             <label class = "subtitle" for="bookID">book ID</label>
-            <input class="form_style" type="text" id="bookID"><br><br>
+            <input class="form_style" type="text" id="bookID" required><br><br>
         </div>
 
         <div class="form_group">
             <label class = "subtitle" for="author">author</label>
-            <input class="form_style" type="text" id="author"><br><br>
+            <input class="form_style" type="text" id="author" required><br><br>
         </div>
 
         <div class="form_group">
             <label class = "subtitle" for="category">category</label>
-            <input class="form_style" type="text" id="category"><br><br>
+            <input class="form_style" type="text" id="category" required><br><br>
         </div>
 
         <div class="form_group">
             <label class = "subtitle" for="numberofpages">number of pages</label>
-            <input class="form_style" type="number" id="numberofpages" min="0" max="100000"><br><br>
+            <input class="form_style" type="number" id="numberofpages" min="0" max="100000" required><br><br>
         </div>
 
         <div class="form_group">
