--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -48,12 +48,12 @@
                     <div class="fields">
                         <div class="inputField">
                             <label for="bk_id">Book ID</label>
-                            <input id="bk_id" type="text" placeholder="Enter Book ID" name="bk_id" required maxlength="10">
+                            <input id="bk_id" type="text" placeholder="Enter Book ID" name="bk_id" required>
                         </div>
 
                         <div class="inputField">
                             <label for="book_author">Author</label>
-                            <input id="book_author" type="text" name="author" placeholder="Author" required maxlength="50">
+                            <input id="book_author" type="text" name="author" placeholder="Author" required>
                         </div>
 
                         <div class="inputField">
@@ -80,32 +80,32 @@
 
                         <div class="inputField">
                             <label for="f_name">First Name</label>
-                            <input id="f_name" type="text" placeholder="Enter your first name" name="f_name" required maxlength="50">
+                            <input id="f_name" type="text" placeholder="Enter your first name" name="f_name" required >
                         </div>
 
                         <div class="inputField">
                             <label for="m_name">Middle Name</label>
-                            <input id="m_name" type="text" placeholder="Enter your middle name" name="m_name" maxlength="50">
+                            <input id="m_name" type="text" placeholder="Enter your middle name" name="m_name" >
                         </div>
 
                         <div class="inputField">
                             <label for="l_name">Last Name</label>
-                            <input id="l_name" type="text" placeholder="Enter your last name" name="l_name" required maxlength="50">
+                            <input id="l_name" type="text" placeholder="Enter your last name" name="l_name" required >
                         </div>
 
                         <div class="inputField">
                             <label for="mail">Email</label>
-                            <input id="mail" type="email" placeholder="Enter your email" name="mail" required maxlength="50">
+                            <input id="mail" type="email" placeholder="Enter your email" name="mail" required >
                         </div>
 
                         <div class="inputField">
                             <label for="ph_no">Phone Number</label>
-                            <input id="ph_no" type="text" placeholder="Enter your phone number" name="ph_no" required maxlength="50">
+                            <input id="ph_no" type="text" placeholder="Enter your phone number" name="ph_no" required>
                         </div>
 
                         <div class="inputField">
                             <label for="add">Delivery Address</label>
-                            <input id="add" type="text" placeholder="Enter delivery address" name="add" required maxlength="100">
+                            <input id="add" type="text" placeholder="Enter delivery address" name="add" required >
                         </div>
 
                         <div class="inputField">
