--- a/Website/AddBook.html
+++ b/Website/AddBook.html
@@ -47,7 +47,7 @@
     </div>
   
 
-    <form class ="add_book_class" id = "addBookForm" method="GET">
+    <form class ="add_book_class" id = "addBookForm" method="post">
 
         <p class="title">Add Book</p>
 
